--- a/dmu32/dmu32_GAMA-15/GAMA-15_catalogue_merging.ipynb
+++ b/dmu32/dmu32_GAMA-15/GAMA-15_catalogue_merging.ipynb
@@ -13,6 +13,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from herschelhelp_internal import git_version\n",
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": true
@@ -143,46 +157,46 @@
    },
    "outputs": [],
    "source": [
-    "# # XID+ SPIRE\n",
+    "# XID+ SPIRE\n",
     "\n",
-    "# xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/data/\"\n",
-    "#                          \"dmu26_XID+SPIRE_CDFS-SWIRE_cat_20170919.fits\")\n",
-    "# xid_spire.meta = None\n",
+    "xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/data/\"\n",
+    "                         \"dmu26_XID+SPIRE_CDFS-SWIRE_cat_20170919.fits\")\n",
+    "xid_spire.meta = None\n",
     "\n",
-    "# xid_spire['HELP_ID'].name = \"help_id\"\n",
+    "xid_spire['HELP_ID'].name = \"help_id\"\n",
     "\n",
-    "# # Convert from mJy to μJy\n",
-    "# for col in [\"F_SPIRE_250\", \"FErr_SPIRE_250_u\", \"FErr_SPIRE_250_l\",\n",
-    "#             \"F_SPIRE_350\", \"FErr_SPIRE_350_u\", \"FErr_SPIRE_350_l\",\n",
-    "#             \"F_SPIRE_500\", \"FErr_SPIRE_500_u\", \"FErr_SPIRE_500_l\"]:\n",
-    "#     xid_spire[col] *= 1000\n",
+    "# Convert from mJy to μJy\n",
+    "for col in [\"F_SPIRE_250\", \"FErr_SPIRE_250_u\", \"FErr_SPIRE_250_l\",\n",
+    "            \"F_SPIRE_350\", \"FErr_SPIRE_350_u\", \"FErr_SPIRE_350_l\",\n",
+    "            \"F_SPIRE_500\", \"FErr_SPIRE_500_u\", \"FErr_SPIRE_500_l\"]:\n",
+    "    xid_spire[col] *= 1000\n",
     "\n",
-    "# xid_spire.add_column(Column(\n",
-    "#     data=np.max([xid_spire['FErr_SPIRE_250_u'] - xid_spire['F_SPIRE_250'],\n",
-    "#                  xid_spire['F_SPIRE_250'] - xid_spire['FErr_SPIRE_250_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_spire_250\"\n",
-    "# ))\n",
-    "# xid_spire['F_SPIRE_250'].name = \"f_spire_250\"\n",
-    "# xid_spire.add_column(Column(\n",
-    "#     data=np.max([xid_spire['FErr_SPIRE_350_u'] - xid_spire['F_SPIRE_350'],\n",
-    "#                  xid_spire['F_SPIRE_350'] - xid_spire['FErr_SPIRE_350_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_spire_350\"\n",
-    "# ))\n",
-    "# xid_spire['F_SPIRE_350'].name = \"f_spire_350\"\n",
-    "# xid_spire.add_column(Column(\n",
-    "#     data=np.max([xid_spire['FErr_SPIRE_500_u'] - xid_spire['F_SPIRE_500'],\n",
-    "#                  xid_spire['F_SPIRE_500'] - xid_spire['FErr_SPIRE_500_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_spire_500\"\n",
-    "# ))\n",
-    "# xid_spire['F_SPIRE_500'].name = \"f_spire_500\"\n",
+    "xid_spire.add_column(Column(\n",
+    "    data=np.max([xid_spire['FErr_SPIRE_250_u'] - xid_spire['F_SPIRE_250'],\n",
+    "                 xid_spire['F_SPIRE_250'] - xid_spire['FErr_SPIRE_250_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_spire_250\"\n",
+    "))\n",
+    "xid_spire['F_SPIRE_250'].name = \"f_spire_250\"\n",
+    "xid_spire.add_column(Column(\n",
+    "    data=np.max([xid_spire['FErr_SPIRE_350_u'] - xid_spire['F_SPIRE_350'],\n",
+    "                 xid_spire['F_SPIRE_350'] - xid_spire['FErr_SPIRE_350_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_spire_350\"\n",
+    "))\n",
+    "xid_spire['F_SPIRE_350'].name = \"f_spire_350\"\n",
+    "xid_spire.add_column(Column(\n",
+    "    data=np.max([xid_spire['FErr_SPIRE_500_u'] - xid_spire['F_SPIRE_500'],\n",
+    "                 xid_spire['F_SPIRE_500'] - xid_spire['FErr_SPIRE_500_l']],\n",
+    "                 axis=0),\n",
+    "    name=\"ferr_spire_500\"\n",
+    "))\n",
+    "xid_spire['F_SPIRE_500'].name = \"f_spire_500\"\n",
     "\n",
-    "# xid_spire = xid_spire['help_id',\n",
-    "#                       'f_spire_250', 'ferr_spire_250', 'flag_spire_250',\n",
-    "#                       'f_spire_350', 'ferr_spire_350', 'flag_spire_350',\n",
-    "#                       'f_spire_500', 'ferr_spire_500', 'flag_spire_500']"
+    "xid_spire = xid_spire['help_id',\n",
+    "                      'f_spire_250', 'ferr_spire_250', 'flag_spire_250',\n",
+    "                      'f_spire_350', 'ferr_spire_350', 'flag_spire_350',\n",
+    "                      'f_spire_500', 'ferr_spire_500', 'flag_spire_500']"
    ]
   },
   {
@@ -280,15 +294,16 @@
    },
    "outputs": [],
    "source": [
-    "# merged_table = join(merged_table, xid_spire, join_type='left')\n",
+    "merged_table = ml\n",
+    "merged_table = join(merged_table, xid_spire, join_type='left')\n",
     "        \n",
-    "# # Fill values\n",
-    "# for col in xid_spire.colnames:\n",
-    "#     if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
-    "#         merged_table[col].fill_value = np.nan\n",
-    "#     elif col.startswith(\"flag_\"):\n",
-    "#         merged_table[col].fill_value = False\n",
-    "# merged_table = merged_table.filled()"
+    "# Fill values\n",
+    "for col in xid_spire.colnames:\n",
+    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "        merged_table[col].fill_value = np.nan\n",
+    "    elif col.startswith(\"flag_\"):\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
    ]
   },
   {
@@ -299,7 +314,7 @@
    },
    "outputs": [],
    "source": [
-    "merged_table = ml\n",
+    "\n",
     "merged_table = join(merged_table, photoz, join_type='left')\n",
     "\n",
     "# Fill values\n",
@@ -344,7 +359,7 @@
     "    \n",
     "\n",
     "    # Check that we did not forget any column\n",
-    "    assert set(columns) == set(merged_table.colnames)\n",
+    "    print(set(columns) - set(merged_table.colnames))\n",
     "    \n",
     "    \n",
     "    merged_table.write(\"data/GAMA-15_{}_cigale.fits\".format(SUFFIX))"
@@ -370,7 +385,7 @@
     "if not FIRST_RUN_FOR_CIGALE:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_CDFS-SWIRE/data/HELP_final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_GAMA-15/data/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
@@ -512,7 +527,7 @@
    "source": [
     "if not FIRST_RUN_FOR_CIGALE:\n",
     "\n",
-    "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\")"
+    "    merged_table[columns].write(\"data/GAMA-15.fits\")"
    ]
   }
  ],
