--- a/dmu32/dmu32_ELAIS-S1/ELAIS-S1_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-S1/ELAIS-S1_catalogue_merging.ipynb
@@ -13,6 +13,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from herschelhelp_internal import git_version\n",
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": true
@@ -77,21 +91,21 @@
    },
    "outputs": [],
    "source": [
-    "# # XID+ MIPS24\n",
+    "# XID+ MIPS24\n",
     "\n",
-    "# xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_CDFS-SWIRE/data/\"\n",
-    "#                           \"dmu26_XID+MIPS_CDFS-SWIRE_cat_20170901.fits\")\n",
-    "# xid_mips24.meta = None\n",
+    "xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_CDFS-SWIRE/data/\"\n",
+    "                          \"dmu26_XID+MIPS_ELAIS-S1_20180215.fits \")\n",
+    "xid_mips24.meta = None\n",
     "\n",
-    "# # Adding the error column\n",
-    "# xid_mips24.add_column(Column(\n",
-    "#     data=np.max([xid_mips24['FErr_MIPS_24_u'] - xid_mips24['F_MIPS_24'],\n",
-    "#                  xid_mips24['F_MIPS_24'] - xid_mips24['FErr_MIPS_24_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_mips_24\"\n",
-    "# ))\n",
-    "# xid_mips24['F_MIPS_24'].name = \"f_mips_24\"\n",
-    "# xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24', 'flag_mips_24']"
+    "# Adding the error column\n",
+    "xid_mips24.add_column(Column(\n",
+    "    data=np.max([xid_mips24['FErr_MIPS_24_u'] - xid_mips24['F_MIPS_24'],\n",
+    "                 xid_mips24['F_MIPS_24'] - xid_mips24['FErr_MIPS_24_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_mips_24\"\n",
+    "))\n",
+    "xid_mips24['F_MIPS_24'].name = \"f_mips_24\"\n",
+    "xid_mips24 = xid_mips24['help_id', 'f_mips_24', 'ferr_mips_24', 'flag_mips_24']"
    ]
   },
   {
@@ -102,38 +116,38 @@
    },
    "outputs": [],
    "source": [
-    "# # XID+ PACS\n",
+    "# XID+ PACS\n",
     "\n",
-    "# xid_pacs = Table.read(\"../../dmu26/dmu26_XID+PACS_CDFS-SWIRE/data/\"\n",
-    "#                         \"dmu26_XID+PACS_CDFS-SWIRE_cat_20171019.fits\")\n",
-    "# xid_pacs.meta = None\n",
+    "xid_pacs = Table.read(\"../../dmu26/dmu26_XID+PACS_ELAIS-S1/data/\"\n",
+    "                        \"dmu26_XID+PACS_ELAIS-S1_cat_20180416.fits\")\n",
+    "xid_pacs.meta = None\n",
     "\n",
-    "# # Convert from mJy to μJy\n",
-    "# for col in [\"F_PACS_100\", \"FErr_PACS_100_u\", \"FErr_PACS_100_l\",\n",
-    "#             \"F_PACS_160\", \"FErr_PACS_160_u\", \"FErr_PACS_160_l\"]:\n",
-    "#     xid_pacs[col] *= 1000\n",
+    "# Convert from mJy to μJy\n",
+    "for col in [\"F_PACS_100\", \"FErr_PACS_100_u\", \"FErr_PACS_100_l\",\n",
+    "            \"F_PACS_160\", \"FErr_PACS_160_u\", \"FErr_PACS_160_l\"]:\n",
+    "    xid_pacs[col] *= 1000\n",
     "\n",
-    "# xid_pacs.add_column(Column(\n",
-    "#     data=np.max([xid_pacs['FErr_PACS_100_u'] - xid_pacs['F_PACS_100'],\n",
-    "#                  xid_pacs['F_PACS_100'] - xid_pacs['FErr_PACS_100_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_pacs_green\"\n",
-    "# ))\n",
-    "# xid_pacs['F_PACS_100'].name = \"f_pacs_green\"\n",
-    "# xid_pacs['flag_PACS_100'].name = \"flag_pacs_green\"\n",
+    "xid_pacs.add_column(Column(\n",
+    "    data=np.max([xid_pacs['FErr_PACS_100_u'] - xid_pacs['F_PACS_100'],\n",
+    "                 xid_pacs['F_PACS_100'] - xid_pacs['FErr_PACS_100_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_pacs_green\"\n",
+    "))\n",
+    "xid_pacs['F_PACS_100'].name = \"f_pacs_green\"\n",
+    "xid_pacs['flag_PACS_100'].name = \"flag_pacs_green\"\n",
     "\n",
-    "# xid_pacs.add_column(Column(\n",
-    "#     data=np.max([xid_pacs['FErr_PACS_160_u'] - xid_pacs['F_PACS_160'],\n",
-    "#                  xid_pacs['F_PACS_160'] - xid_pacs['FErr_PACS_160_l']],\n",
-    "#                 axis=0),\n",
-    "#     name=\"ferr_pacs_red\"\n",
-    "# ))\n",
-    "# xid_pacs['F_PACS_160'].name = \"f_pacs_red\"\n",
-    "# xid_pacs['flag_PACS_160'].name = \"flag_pacs_red\"\n",
+    "xid_pacs.add_column(Column(\n",
+    "    data=np.max([xid_pacs['FErr_PACS_160_u'] - xid_pacs['F_PACS_160'],\n",
+    "                 xid_pacs['F_PACS_160'] - xid_pacs['FErr_PACS_160_l']],\n",
+    "                axis=0),\n",
+    "    name=\"ferr_pacs_red\"\n",
+    "))\n",
+    "xid_pacs['F_PACS_160'].name = \"f_pacs_red\"\n",
+    "xid_pacs['flag_PACS_160'].name = \"flag_pacs_red\"\n",
     "\n",
-    "# xid_pacs = xid_pacs['help_id', 'f_pacs_green', 'ferr_pacs_green',\n",
-    "#                     'flag_pacs_green', 'f_pacs_red', 'ferr_pacs_red',\n",
-    "#                     'flag_pacs_red']\n"
+    "xid_pacs = xid_pacs['help_id', 'f_pacs_green', 'ferr_pacs_green',\n",
+    "                    'flag_pacs_green', 'f_pacs_red', 'ferr_pacs_red',\n",
+    "                    'flag_pacs_red']\n"
    ]
   },
   {
@@ -241,15 +255,15 @@
    },
    "outputs": [],
    "source": [
-    "# merged_table = join(ml, xid_mips24, join_type='left')\n",
+    "merged_table = join(ml, xid_mips24, join_type='left')\n",
     "\n",
     "# # Fill values\n",
-    "# for col in xid_mips24.colnames:\n",
-    "#     if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
-    "#         merged_table[col].fill_value = np.nan\n",
-    "#     elif col.startswith(\"flag_\"):\n",
-    "#         merged_table[col].fill_value = False\n",
-    "# merged_table = merged_table.filled()"
+    "for col in xid_mips24.colnames:\n",
+    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "        merged_table[col].fill_value = np.nan\n",
+    "    elif col.startswith(\"flag_\"):\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
    ]
   },
   {
@@ -260,15 +274,15 @@
    },
    "outputs": [],
    "source": [
-    "# merged_table = join(merged_table, xid_pacs, join_type='left')\n",
+    "merged_table = join(merged_table, xid_pacs, join_type='left')\n",
     "        \n",
-    "# # Fill values\n",
-    "# for col in xid_pacs.colnames:\n",
-    "#     if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
-    "#         merged_table[col].fill_value = np.nan\n",
-    "#     elif col.startswith(\"flag_\"):\n",
-    "#         merged_table[col].fill_value = False\n",
-    "# merged_table = merged_table.filled()"
+    "# Fill values\n",
+    "for col in xid_pacs.colnames:\n",
+    "    if col.startswith(\"f_\") or col.startswith(\"ferr_\"):\n",
+    "        merged_table[col].fill_value = np.nan\n",
+    "    elif col.startswith(\"flag_\"):\n",
+    "        merged_table[col].fill_value = False\n",
+    "merged_table = merged_table.filled()"
    ]
   },
   {
@@ -279,8 +293,8 @@
    },
    "outputs": [],
    "source": [
-    "# merged_table = join(merged_table, xid_spire, join_type='left')\n",
-    "merged_table = join(ml, xid_spire, join_type='left')\n",
+    "merged_table = join(merged_table, xid_spire, join_type='left')\n",
+    "\n",
     "    \n",
     "# Fill values\n",
     "for col in xid_spire.colnames:\n",
@@ -304,17 +318,6 @@
     "# Fill values\n",
     "merged_table['redshift'].fill_value = np.nan\n",
     "merged_table = merged_table.filled()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "merged_table = ml"
    ]
   },
   {
@@ -357,7 +360,9 @@
     "    # assert set(columns) == set(merged_table.colnames)\n",
     "    \n",
     "    \n",
-    "    merged_table.write(\"data/ELAIS-S1_{}_cigale.fits\".format(SUFFIX), overwrite=True)"
+    "    merged_table.write(\"data/ELAIS-S1_{}_cigale.fits\".format(SUFFIX), overwrite=True)\n",
+    "    print(set(columns) - set(merged_table.colnames))\n",
+    "    "
    ]
   },
   {
