ELAIS-S1 cigale input with everything

--- a/dmu32/dmu32_ELAIS-S1/ELAIS-S1_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-S1/ELAIS-S1_catalogue_merging.ipynb
@@ -13,11 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This notebook was run with herschelhelp_internal version: \n",
+      "0246c5d (Thu Jan 25 17:01:47 2018 +0000) [with local modifications]\n",
+      "This notebook was executed on: \n",
+      "2018-04-16 13:28:59.892299\n"
+     ]
+    }
+   ],
    "source": [
     "from herschelhelp_internal import git_version\n",
     "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
@@ -27,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -47,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -70,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -93,8 +104,8 @@
    "source": [
     "# XID+ MIPS24\n",
     "\n",
-    "xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_CDFS-SWIRE/data/\"\n",
-    "                          \"dmu26_XID+MIPS_ELAIS-S1_20180215.fits \")\n",
+    "xid_mips24 = Table.read(\"../../dmu26/dmu26_XID+MIPS_ELAIS-S1/data/\"\n",
+    "                          \"dmu26_XID+MIPS_ELAIS-S1_20180215.fits\")\n",
     "xid_mips24.meta = None\n",
     "\n",
     "# Adding the error column\n",
@@ -110,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -152,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -160,7 +171,7 @@
    "source": [
     "# # XID+ SPIRE\n",
     "\n",
-    "xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_CDFS-SWIRE/data/\"\n",
+    "xid_spire = Table.read(\"../../dmu26/dmu26_XID+SPIRE_ELAIS-S1/data/\"\n",
     "                         \"dmu26_XID+SPIRE_ELAIS-S1_20180327.fits\")\n",
     "xid_spire.meta = None\n",
     "\n",
@@ -202,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -221,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -230,7 +241,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/ipykernel/__main__.py:5: RuntimeWarning: invalid value encountered in less\n"
+      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "  return getattr(self.data, op)(other)\n"
      ]
     }
    ],
@@ -249,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -268,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -287,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -307,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -333,7 +345,15 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_CIGALE_CAT:\n",
     "    \n",
