--- a/dmu28/dmu28_ELAIS-S1/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_ELAIS-S1/CIGALE_catalogue_preparation.ipynb
@@ -79,12 +79,12 @@
    },
    "outputs": [],
    "source": [
-    "# good = {}\n",
-    "# for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
-    "#     good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
-    "#                                    ~master_catalogue['flag_{}'.format(band)])\n",
-    "#     good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
-    "#                               master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
+    "good = {}\n",
+    "for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
+    "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
+    "                                    ~master_catalogue['flag_{}'.format(band)])\n",
+    "    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
+    "                              master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
    ]
   },
   {
@@ -102,7 +102,7 @@
    },
    "outputs": [],
    "source": [
-    "# combined_good = np.sum(list(good.values()), axis=0) >= 2"
+    "combined_good = np.sum(list(good.values()), axis=0) >= 2"
    ]
   },
   {
@@ -113,7 +113,7 @@
    },
    "outputs": [],
    "source": [
-    "# print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
+    "print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
    ]
   },
   {
@@ -144,8 +144,7 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue = master_catalogue[combined_good].copy()\n",
-    "best_catalogue = master_catalogue.copy()"
+    "best_catalogue = master_catalogue[combined_good].copy()\n"
    ]
   },
   {
@@ -235,7 +234,7 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_20180129.fits\")"
+    "best_catalogue.write(\"data_tmp/ELAIS-S1_cigale_best_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -264,8 +263,8 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue.remove_column(\"redshift\")\n",
-    "#best_catalogue[\"zspec\"].name = \"redshift\""
+    "best_catalogue.remove_column(\"redshift\")\n",
+    "best_catalogue[\"zspec\"].name = \"redshift\""
    ]
   },
   {
