Fixing VIDEO fluxes on ES1

--- a/dmu1/dmu1_ml_ELAIS-S1/1.1_VISTA-VIDEO.ipynb
+++ b/dmu1/dmu1_ml_ELAIS-S1/1.1_VISTA-VIDEO.ipynb
@@ -245,6 +245,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Calculating fluxes from magnitudes due to an issue with some objects\n",
+    "for col in catalogue.colnames:\n",
+    "    if col.startswith('m_'):\n",
+    "        \n",
+    "        errcol = \"merr{}\".format(col[1:])   \n",
+    "        \n",
+    "        flux_old = catalogue[\"f{}\".format(col[1:])]\n",
+    "        error_old = catalogue[\"ferr{}\".format(col[1:])]\n",
+    "        \n",
+    "        flux_new, error_from_mag = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
+    "        error_new = flux_new * (error_old/flux_old)\n",
+    "        \n",
+    "        # Fluxes are added in µJy\n",
+    "        catalogue[\"f{}\".format(col[1:])] = flux * 1.e6\n",
+    "        catalogue[\"ferr{}\".format(col[1:])] = error_new * 1.e6\n",
+    "        \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -555,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
