--- a/dmu17/dmu17_Lockman-SWIRE/normalize_MIPS_psf.ipynb
+++ b/dmu17/dmu17_Lockman-SWIRE/normalize_MIPS_psf.ipynb
@@ -3436,7 +3436,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -3450,7 +3450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
