--- a/dmu18/dmu18_HELP-PACS-maps/homogenise_PACS_maps.ipynb
+++ b/dmu18/dmu18_HELP-PACS-maps/homogenise_PACS_maps.ipynb
@@ -41,7 +41,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "filelist=Table.read('./pacs_maps.csv', format='csv')"
@@ -60,47 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AKARI-NEP / 100 processed...\n",
-      "AKARI-NEP / 160 processed...\n",
-      "AKARI-SEP / 100 processed...\n",
-      "AKARI-SEP / 160 processed...\n",
-      "Bootes / 100 processed...\n",
-      "Bootes / 160 processed...\n",
-      "CDFS-SWIRE / 100 processed...\n",
-      "CDFS-SWIRE / 160 processed...\n",
-      "COSMOS now has units\n",
-      "COSMOS now has units\n",
-      "COSMOS / 100 processed...\n",
-      "COSMOS now has units\n",
-      "COSMOS now has units\n",
-      "COSMOS / 160 processed...\n",
-      "EGS / 100 processed...\n",
-      "EGS / 160 processed...\n",
-      "ELAIS-N1 / 100 processed...\n",
-      "ELAIS-N1 / 160 processed...\n",
-      "ELAIS-N2 / 100 processed...\n",
-      "ELAIS-N2 / 160 processed...\n",
-      "ELAIS-S1 / 100 processed...\n",
-      "ELAIS-S1 / 160 processed...\n",
-      "GAMA-09 / 100 processed...\n",
-      "GAMA-09 / 160 processed...\n",
-      "GAMA-12 / 100 processed...\n",
-      "GAMA-12 / 160 processed...\n",
-      "GAMA-15 / 100 processed...\n",
-      "GAMA-15 / 160 processed...\n",
-      "Lockman-SWIRE / 100 processed...\n",
-      "Lockman-SWIRE / 160 processed...\n",
-      "NGP / 100 processed...\n",
-      "NGP / 160 processed...\n",
-      "XMM-LSS / 100 processed...\n",
-      "XMM-LSS / 160 processed...\n"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-6ec0378b992b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfield\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilelist\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'field'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0;31m#print(filelist[filelist['field']==field])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
      ]
     }
    ],
@@ -217,7 +190,7 @@
     "        hdu_list = fits.HDUList([primary_hdu, image_hdu, noise_hdu, cov_hdu, psf_hdu])\n",
     "        hdu_list.writeto(f\"data/{field}_PACS{str(b)}_v{VERSION}.fits\",\n",
     "                     checksum=True, overwrite=True)\n",
-    "        print(f\"{field} / {b} processed...\")\n"
+    "       # print(f\"{field} / {b} processed...\")\n"
    ]
   },
   {
@@ -232,9 +205,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:new]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-new-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -246,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
