Reran ELAIS-s1 to dmu28 with VIDEO flux fix

--- a/dmu1/Masterlist_overview.ipynb
+++ b/dmu1/Masterlist_overview.ipynb
@@ -60,7 +60,7 @@
     "['EGS',                '20180406' ],\n",
     "['ELAIS-N1',           '20171016' ],\n",
     "['ELAIS-N2',           '20180218' ],\n",
-    "['ELAIS-S1',           '20180221' ],\n",
+    "['ELAIS-S1',           '20180416' ],\n",
     "['GAMA-09',            '20171206' ],\n",
     "['GAMA-12',            '20180218' ],\n",
     "['GAMA-15',            '20180213' ],\n",
@@ -129,7 +129,7 @@
     "    \n",
     "    \n",
     "    moc = MOC(filename='../dmu2/dmu2_field_coverages/{}_MOC.fits'.format(field[0]))\n",
-    "    area = round(moc.area_sq_deg)\n",
+    "    area = moc.area_sq_deg\n",
     "    masterlist_summary['area_sq_degrees'][masterlist_summary['field'] == field[0]] = area\n",
     "    \n",
     "    masterlist_summary['dr1_suffix'][masterlist_summary['field'] == field[0]] = field[1]\n",
