--- a/dmu28/dmu28_GAMA-09/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_GAMA-09/CIGALE_catalogue_preparation.ipynb
@@ -146,7 +146,7 @@
    "outputs": [],
    "source": [
     "# best_catalogue = master_catalogue[combined_good].copy()\n",
-    "best_catalogue = master_catalogue.copy()"
+    "best_catalogue = master_catalogue[optnir].copy()"
    ]
   },
   {
@@ -254,7 +254,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/GAMA-09_cigale_best_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
+    "best_catalogue.write(\"data_tmp/GAMA-09_cigale_optnir_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
