GAMA-15 Cigale input ready to run on Vulcain

--- a/dmu28/dmu28_GAMA-15/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_GAMA-15/CIGALE_catalogue_preparation.ipynb
@@ -77,19 +77,19 @@
    },
    "outputs": [],
    "source": [
-    "# good = {}\n",
-    "# for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
-    "#     good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
-    "#                                    ~master_catalogue['flag_{}'.format(band)])\n",
-    "#     good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
-    "#                               master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
+    "good = {}\n",
+    "for band in ['spire_250', 'spire_350', 'spire_500']: #'pacs_green', 'pacs_red', \n",
+    "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
+    "                                   ~master_catalogue['flag_{}'.format(band)])\n",
+    "    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
+    "                              master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will keep only sources with at leat 2 good far-IR measurements (we may actually use less sources are not all may have a redshift)."
+    "We will keep only sources with at leat 2 good far-IR measurements (we may actually use less sources are not all may have a redshift). Note that since currently we only SPIRE this is a more stringent cut than on other fields."
    ]
   },
   {
@@ -100,7 +100,7 @@
    },
    "outputs": [],
    "source": [
-    "# combined_good = np.sum(list(good.values()), axis=0) >= 2"
+    "combined_good = np.sum(list(good.values()), axis=0) >= 2"
    ]
   },
   {
@@ -111,7 +111,7 @@
    },
    "outputs": [],
    "source": [
-    "# print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
+    "print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
    ]
   },
   {
@@ -124,14 +124,15 @@
    "source": [
     "# Only sources with at least two optical and at least two near infrared detections\n",
     "optnir = ((master_catalogue['flag_optnir_det'] == 3) \n",
-    "          | (master_catalogue['flag_optnir_det'] == 7))"
+    "          | (master_catalogue['flag_optnir_det'] == 7))\n",
+    "print(\"Number of optnir sources: {}\".format(np.sum(optnir)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Main catalogue for CIGALE"
+    "# 1. CIGALE input catalogue to generate XID+ priors\n"
    ]
   },
   {
@@ -142,7 +143,6 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue = master_catalogue[combined_good].copy()\n",
     "best_catalogue = master_catalogue[optnir].copy()"
    ]
   },
@@ -253,7 +253,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Catalogue using spectroscopic redshift"
+    "# 2. Main CIGALE input catalogue with best data available"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_catalogue = master_catalogue[combined_good].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Correction for galactic extinction\n",
+    "best_catalogue = correct_galactic_extinction(best_catalogue, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Convertion to CIGALE format\n",
+    "best_catalogue = convert_table_for_cigale(best_catalogue, inplace=True, remove_zerofluxes=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Band selection\n",
+    "remove_unneeded_fluxes(g_bands)\n",
+    "remove_unneeded_fluxes(u_bands)\n",
+    "remove_unneeded_fluxes(r_bands)\n",
+    "remove_unneeded_fluxes(i_bands)\n",
+    "remove_unneeded_fluxes(z_bands)\n",
+    "remove_unneeded_fluxes(y_bands)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_catalogue.write(\"data_tmp/GAMA-15_cigale_best_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Catalogue using spectroscopic redshift"
    ]
   },
   {
