Star masks on G12 and HELPID tests on L-SWIRE

--- a/dmu4/dmu4_sm_GAMA-12/generate_holes.ipynb
+++ b/dmu4/dmu4_sm_GAMA-12/generate_holes.ipynb
@@ -15,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from herschelhelp_internal import git_version\n",
@@ -47,7 +49,7 @@
    "source": [
     "OUT_DIR = os.environ.get('OUT_DIR', \"./data\")\n",
     "SUFFIX = os.environ.get('SUFFIX', time.strftime(\"_%Y%m%d\"))\n",
-    "SUFFIX = SUFFIX + '_WARNING-MADE-WITH-Lockman-SWIRE-PARAMS'\n",
+    "SUFFIX = SUFFIX #+ '_WARNING-MADE-WITH-Lockman-SWIRE-PARAMS'\n",
     "\n",
     "try:\n",
     "    os.makedirs(OUT_DIR)\n",
@@ -114,6 +116,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -134,7 +137,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ORDER=16\n",
@@ -165,12 +170,10 @@
     "# Run with parameters from IDL code. The IDL output files are in ./data/\n",
     "\n",
     "per_catalogue_params = [\n",
-    "#     Field       Band        A         B            magnitude limit\n",
-    "    [field, 'megacam_r',      2.30374,  -0.0962746,  18], # Using 18 as faint limit.\n",
-    "    [field, 'gpc1_r',         2.46029,  -0.111433,   18], # Using 18 as faint limit. \n",
-    "    [field, 'irac1',          2.56501,  -0.100879,   18], # Using 18 as faint limit.\n",
-    "    [field, 'ukidss_k',       3.67944,  -0.173850,   18], # Using 18 as faint limit.\n",
-    "    [field, 'wfc_r',          3.43951,  -0.173789,   18]  # Using 18 as faint limit.\n",
+    "#     Field       Band        A          B            magnitude limit\n",
+    "\n",
+    "    [field, 'ukidss_k',      3.14772,    -0.136469,   16], # Using 18 as faint limit.50% cross linear params      3.14772    -0.136469\n",
+    "\n",
     "]   \n",
     "\n",
     "#We previously took a moc of the survey to only make holes on that area, which \n",
@@ -180,7 +183,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for pristine_cat in per_catalogue_params:\n",
@@ -201,14 +206,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ORDER=16\n",
     "for pristine_cat in per_catalogue_params:\n",
     "    starmask.reg2moc('data/holes_' + field + '_' + pristine_cat[1] + SUFFIX + '.reg',\n",
     "            '../../dmu2/dmu2_field_coverages/' + field + '_MOC.fits',\n",
-    "            'data/holes_' + field + '_' + pristine_cat[1] + '_O' + str(ORDER) + SUFFIX + '.fits',\n",
+    "            'data/holes_' + field + '_' + pristine_cat[1] + '_O' + str(ORDER) + SUFFIX + '_MOC.fits',\n",
     "            ra_typ=fields[field][0],\n",
     "            dec_typ=fields[field][1],\n",
     "            order=ORDER)"
@@ -231,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
