Testing ids on xid fine need redoing on photoz for LSWIRE

--- a/dmu24/dmu24_Lockman-SWIRE/2_Update_HELP_IDs.ipynb
+++ b/dmu24/dmu24_Lockman-SWIRE/2_Update_HELP_IDs.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Lockman-SWIRE check HELP IDs\n",
     "\n",
-    "Because the photo-zs were computed from an early version of the masterlist, there is some concern that the HELP IDs may have chenged. In this notebook we will check for differences and convert the old IDs to the new ones if required."
+    "Because the photo-zs were computed from an early version of the masterlist, there is some concern that the HELP IDs may have changed. In this notebook we will check for differences and convert the old IDs to the new ones if required."
    ]
   },
   {
@@ -22,9 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -41,6 +39,8 @@
     "from astropy.table import join, Column, Table\n",
     "import numpy as np\n",
     "from pymoc import MOC\n",
+    "\n",
+    "from collections import Counter\n",
     "\n",
     "from herschelhelp_internal.masterlist import merge_catalogues, nb_merge_dist_plot, specz_merge\n",
     "from herschelhelp_internal.utils import coords_to_hpidx, ebv, gen_help_id, inMoc"
@@ -79,9 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "photoz = Table.read(\"./data/master_catalogue_Lockman-SWIRE_20170710_photoz_20170802_r_and_irac1_optimised.fits\")\n",
@@ -98,8 +96,8 @@
    "source": [
     "photoz.meta = None\n",
     "\n",
-    "photoz = photoz['help_id', 'z1_median', 'RA', 'DEC']\n",
-    "photoz['help_id'].name = 'help_id_old'\n",
+    "#photoz = photoz['help_id', 'z1_median', 'RA', 'DEC']\n",
+    "\n",
     "photoz['RA'].name = 'photoz_ra'\n",
     "photoz['DEC'].name = 'photoz_dec'\n",
     "#photoz['z1_median'].name = 'redshift'\n",
@@ -110,9 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "merged_table = join(master_catalogue, photoz, join_type='left')\n",
@@ -125,16 +121,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"Master catalogue length: {}\".format(len(master_catalogue)))\n",
     "print(\"Photoz length: {}\".format(len(photoz)))\n",
     "print(\"Merged length: {}\".format(len(merged_table)))\n",
-    "print(\"Merged photozs length: {}\".format(np.sum(np.isnan(merged_table['z1_median']))))\n",
-    "print(\"Nonnan photozs length: {}\".format(np.sum(np.isnan(photoz['z1_median']))))"
+    "print(\"Merged photozs length: {}\".format(np.sum(~np.isnan(merged_table['z1_median']))))\n",
+    "print(\"Nonnan photozs length: {}\".format(np.sum(~np.isnan(photoz['z1_median']))))"
    ]
   },
   {
@@ -150,6 +144,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "photoz['photoz_ra'].unit = u.deg\n",
+    "photoz['photoz_dec'].unit = u.deg\n",
     "nb_merge_dist_plot(\n",
     "    SkyCoord(photoz['photoz_ra'], photoz['photoz_dec']),\n",
     "    SkyCoord(master_catalogue['ra'], master_catalogue['dec'])\n",
@@ -197,6 +193,7 @@
     "        The catalogue with current help_id column added.\n",
     "\n",
     "    \"\"\"\n",
+    "    catalogue = catalogue.copy()\n",
     "    cat_coords = SkyCoord(catalogue[RA_COL].data * u.deg,\n",
     "                          catalogue[DEC_COL].data * u.deg)\n",
     "    master_coords = SkyCoord(master_catalogue['ra'].data * u.deg,\n",
@@ -225,7 +222,7 @@
     "    catalogue.add_column(\n",
     "        Column(data=np.full(len(catalogue), '', dtype='<U33'),\n",
     "               name=\"help_id\"))\n",
-    "    catalogue['help_id'][idx_cat] = master['help_id'][idx_master]\n",
+    "    catalogue['help_id'][idx_cat] = master_catalogue['help_id'][idx_master]\n",
     "\n",
     "\n",
     "\n",
@@ -240,7 +237,16 @@
    },
    "outputs": [],
    "source": [
-    "photoz_new = helpid_merge(photoz, \"photoz_ra\", \"photoz_dec\", master_catalogue, radius=0.4*u.arcsec)"
+    "photoz['help_id'].name = 'help_id_old'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "photoz_new = helpid_merge(photoz, \"photoz_ra\", \"photoz_dec\", master_catalogue, radius=0.8*u.arcsec)"
    ]
   },
   {
@@ -251,22 +257,91 @@
    },
    "outputs": [],
    "source": [
-    "merged_table_new = join(master_catalogue, photoz, join_type='left')"
+    "merged_table_new = join(master_catalogue, photoz_new, join_type='left')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(\"Master catalogue length: {}\".format(len(master_catalogue)))\n",
     "print(\"Photoz length: {}\".format(len(photoz)))\n",
     "print(\"Merged length: {}\".format(len(merged_table_new)))\n",
-    "print(\"Merged photozs length: {}\".format(np.sum(np.isnan(merged_table_new['z1_median']))))\n",
-    "print(\"Nonnan photozs length: {}\".format(np.sum(np.isnan(photoz['z1_median']))))"
+    "print(\"Merged photozs length: {}\".format(np.sum(~np.isnan(merged_table_new['z1_median']))))\n",
+    "print(\"Nonnan photozs length: {}\".format(np.sum(~np.isnan(photoz_new['z1_median']))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "photoz_new[:10].show_in_notebook()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "photoz_new['help_id'].fill_value = ''\n",
+    "photoz_new = photoz_new.filled()\n",
+    "has_no_new_id = np.sum(photoz_new['help_id'] == '')\n",
+    "has_same_id = np.sum(photoz_new['help_id'] == photoz_new['help_id_old'])\n",
+    "print(\"Objects not given up to date ids: {}\".format(has_no_new_id))\n",
+    "print(\"Objects with the same id before and after: {}\".format(has_same_id))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = list(photoz_new.colnames)\n",
+    "cols.remove('help_id')\n",
+    "cols.remove('help_id_old')\n",
+    "cols = ['help_id', 'help_id_old'] + cols\n",
+    "cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "photoz_new['help_id', 'help_id_old'][photoz_new['help_id'] != photoz_new['help_id_old']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check that the HELP Ids are unique\n",
+    "mask = (photoz_new['help_id'] != '')\n",
+    "if len(photoz_new[mask]) != len(np.unique(photoz_new['help_id'][mask])):\n",
+    "    print(\"The HELP IDs are not unique!!!\")\n",
+    "else:\n",
+    "    print(\"OK!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#We only include objects with help_ids to ensure joins don't break on empty id objects\n",
+    "photoz_new = photoz_new[mask]"
    ]
   },
   {
@@ -279,12 +354,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "master_catalogue.write(\"./data/master_catalogue_Lockman-SWIRE_20170710_photoz_20170802_r_and_irac1_optimised_UPDATED_IDs_{}.fits\".format( SUFFIX_NEW))"
+    "photoz_new[cols].write(\"./data/master_catalogue_Lockman-SWIRE_20170710_photoz_20170802_r_and_irac1_optimised_UPDATED_IDs_{}.fits\".format( NEW_SUFFIX)\n",
+    "                      ,overwrite=True)"
    ]
   }
  ],
