Make final catalogue on ELAIS-S1

--- a/dmu32/dmu32_ELAIS-S1/ELAIS-S1_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-S1/ELAIS-S1_catalogue_merging.ipynb
@@ -66,8 +66,8 @@
    "source": [
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
-    "MAKE_CIGALE_CAT = True\n",
-    "MAKE_FINAL_CAT = False\n",
+    "MAKE_CIGALE_CAT = False\n",
+    "MAKE_FINAL_CAT = True\n",
     "\n",
     "SUFFIX = '20180416'"
    ]
@@ -405,7 +405,7 @@
     "if MAKE_FINAL_CAT:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_ELAIS-S1/data/HELP_final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_ELAIS-S1/data/best/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
@@ -527,7 +527,7 @@
     "if MAKE_FINAL_CAT:\n",
     "\n",
     "    # Check that we did not forget any column\n",
-    "    assert set(columns) == set(merged_table.colnames)"
+    "    print( set(columns) - set(merged_table.colnames))"
    ]
   },
   {
