--- a/dmu32/dmu32_ELAIS-S1/ELAIS-S1_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-S1/ELAIS-S1_catalogue_merging.ipynb
@@ -25,7 +25,7 @@
       "This notebook was run with herschelhelp_internal version: \n",
       "0246c5d (Thu Jan 25 17:01:47 2018 +0000) [with local modifications]\n",
       "This notebook was executed on: \n",
-      "2018-04-16 18:40:06.952503\n"
+      "2018-04-19 18:49:49.126601\n"
      ]
     }
    ],
@@ -345,15 +345,7 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "set()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if MAKE_CIGALE_CAT:\n",
     "    \n",
@@ -519,10 +511,16 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL_CAT:\n",
     "\n",
@@ -546,8 +544,8 @@
    "outputs": [],
    "source": [
     "if MAKE_FINAL_CAT:\n",
-    "\n",
-    "    merged_table[columns].write(\"data/CDFS-SWIRE.fits\")"
+    "    merged_table[columns].write(\"data/ELAIS-S1_{}.fits\".format(SUFFIX), overwrite=True)\n",
+    "    "
    ]
   }
  ],
