--- a/dmu32/dmu32_Lockman-SWIRE/Lockman-SWIRE_catalogue_merging.ipynb
+++ b/dmu32/dmu32_Lockman-SWIRE/Lockman-SWIRE_catalogue_merging.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
-    "MAKE_CIGALE_INPUT = False\n",
+    "MAKE_CIGALE_INPUT = True\n",
     "MAKE_FINAL_CATALOGUE = True\n",
     "\n",
     "SUFFIX = '20180219'"
@@ -192,7 +192,16 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "  return getattr(self.data, op)(other)\n"
+     ]
+    }
+   ],
    "source": [
     "# Photo-z\n",
     "\n",
@@ -377,7 +386,7 @@
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_Lockman-SWIRE/data/HELP_final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_Lockman-SWIRE/data/best_extcor/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
@@ -467,7 +476,15 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_FINAL_CATALOGUE:\n",
     "\n",
